@@ -1,0 +1,6 @@
+Processing test100...
+warning: no __name__ attribute for class D (module name: test100)
+
+Warnings...
+
+None
